--- a/Site/package.json
+++ b/Site/package.json
@@ -2,6 +2,6 @@
   "name": "genomics-site-deployer",
   "private": true,
   "dependencies": {
-    "@veupathdb/genomics-site": "1.2.20-patch.7"
+    "@veupathdb/genomics-site": "1.2.20-patch-10"
   }
 }
