add the available user dataset types for genomic sites

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -47,7 +47,7 @@ modelprop:
   JBROWSE_SERVICE_URL: "/{{ webapp_ctx }}/service/jbrowse"
 
 user_datasets_uploadTypes_env_map:
-  w: "genelist"
+  w: "genelist,bigwigfiles,rnaseq"
   default: "genelist,bigwigfiles,rnaseq,wrangler"
 
 user_datasets_workspace:
