All the AI backend code (squashed from polluted new-ai-expression branch)

--- a/Model/pom.xml
+++ b/Model/pom.xml
@@ -129,6 +129,12 @@
       <groupId>io.vulpine.lib</groupId>
       <artifactId>Jackfish</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.openai</groupId>
+      <artifactId>openai-java</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
