--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -48,7 +48,7 @@ modelprop:
   AI_EXPRESSION_CACHE_DIR: "/eupath/ai-expr-cache"
   AI_EXPRESSION_QUALTRICS_ID: SV_38C4ZX1JxLi2SEe
   OPENAI_API_KEY: "{{ lookup('euparc', 'attr=api_key xpath=sites/openai default=NOKEY') }}"
-  OPENAI_MAX_DAILY_AI_EXPRESSION_DOLLAR_COST: 33
+  OPENAI_MAX_DAILY_AI_EXPRESSION_DOLLAR_COST: 100 # to go back to 33 after qa demo at BioMalPar
   OPENAI_DOLLAR_COST_PER_1M_AI_INPUT_TOKENS: 2.5
   OPENAI_DOLLAR_COST_PER_1M_AI_OUTPUT_TOKENS: 10
 
