--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
@@ -34,6 +34,11 @@ vdi_datasets_env_map:
 
 user_datasets_workspace:
   community: "{{ communitydatasets_env_map[prefix]|default(communitydatasets_env_map['default']) }}"
+  showExtraMetadata: "{{ showExtraMetadata_env_map[prefix]|default(showExtraMetadata_env_map['default']) }}"  
+
+showExtraMetadata_env_map:
+   w_prefix: false
+   default: true
 
 communitydatasets_env_map:
    w_prefix: false
