--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -97,23 +97,25 @@ highspeedsnpsearchconfig_idPrefix: NGS_SNP.
 highspeedchipsnpsearchconfig_jobsDir: /var/www/Common/tmp/highSpeedChipSnpSearch
 highspeedchipsnpsearchconfig_idPrefix: 'NULL'
 
+appDbPgDbi: "{{ 'dbi:Pg:host=ares9.penn.apidb.org;dbname=' ~ appDb_ldapCommonName if appDb_ldapCommonName is defined else appDb_connectionUrl|jdbc2Dbi }}"
+
 profilesimilarityconfig_dbLogin: '{{ modelconfig_appDb_login }}'
 profilesimilarityconfig_dbPassword: '{{ modelconfig_appDb_password }}'
 profilesimilarityconfig_perlExec: /usr/bin/perl
 # Note: assuming postgres here when connection URL is missing (cannot determine platform from ldap cn)
-profilesimilarityconfig_connectionUrl: "{{ 'DBI:Pg:' ~ appDb_ldapCommonName if appDb_ldapCommonName is defined else appDb_connectionUrl|jdbc2Dbi }}"
+profilesimilarityconfig_connectionUrl: "{{ appDbPgDbi }}"
 
 genelistcomparisonconfig_dbLogin: '{{ modelconfig_appDb_login }}'
 genelistcomparisonconfig_dbPassword: '{{ modelconfig_appDb_password }}'
 genelistcomparisonconfig_perlExec: /usr/bin/perl
 # Note: assuming postgres here when connection URL is missing (cannot determine platform from ldap cn)
-genelistcomparisonconfig_connectionUrl: "{{ 'DBI:Pg:' ~ appDb_ldapCommonName if appDb_ldapCommonName is defined else appDb_connectionUrl|jdbc2Dbi }}"
+genelistcomparisonconfig_connectionUrl: "{{ appDbPgDbi }}"
 
 fisherexacttestconfig_dbLogin: '{{ modelconfig_appDb_login }}'
 fisherexacttestconfig_dbPassword: '{{ modelconfig_appDb_password }}'
 fisherexacttestconfig_perlExec: /usr/bin/perl
 # Note: assuming postgres here when connection URL is missing (cannot determine platform from ldap cn)
-fisherexacttestconfig_connectionUrl: "{{ 'DBI:Pg:' ~ appDb_ldapCommonName if appDb_ldapCommonName is defined else appDb_connectionUrl|jdbc2Dbi }}"
+fisherexacttestconfig_connectionUrl: "{{ appDbPgDbi }}"
 
 _showUnreleasedDataByHostnamePrefix:
   a: false
