Add subscription prods = true for genomics

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -123,3 +123,4 @@ _showUnreleasedDataByHostnamePrefix:
   w: false
 
 showUnreleasedData: "{{ _showUnreleasedDataByHostnamePrefix[hostname_prefix] | default('true') }}"
+showSubscriptionProds: "true"
