--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
@@ -42,7 +42,7 @@ showExtraMetadata_env_map:
 
 communitydatasets_env_map:
    w_prefix: false
-   default: true
+   default: false
 
 modelprop:
   VDI_DATASETS_DIRECTORY: "/var/www/Common/userDatasets"
