we need this for old blast steps such as the one in the public plasmo strategy with signature 25fb4cf6b5558bce

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -89,7 +89,7 @@ commentconfig_userFileUploadDir: /var/www/Common/communityFilesMirror
 commentconfig_solrUrl: https://solr-sitesearch-dev.local.apidb.org:8443/solr/site_search/
 
 
-blastconfig_blastPath: '/opt/ncbi-blast+/bin/'
+blastconfig_blastPath: '/opt/ncbi-blast+/'
 blastconfig_idBlastRegex: '<![CDATA[^*(?:>)*(?:\s)*(?:[^\|]*\|)?(\S+)]]>'
 blastconfig_tempBlastPath: /var/www/Common/tmp/blast
 
