--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -56,8 +56,8 @@ modelprop:
   DOLLAR_COST_PER_1M_AI_OUTPUT_TOKENS: 15
 
 user_datasets_uploadTypes_env_map:
-  w: "genelist"
-  default: "genelist,bigwigfiles,rnaseq,wrangler"
+  w: "genelist,bigwigfiles,rnaseq,phenotype,wrangler"
+  default: "genelist,bigwigfiles,rnaseq,phenotype,wrangler"
 
 user_datasets_workspace:
   enabled: "true"
